--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_exercise C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_exercise "6_guess the size.c")
+add_executable(C_exercise 7_array.c)
